--- a/src/app/modules/contests/pages/contest/contest-attempts/filter/contest-attempts-filter.component.html
+++ b/src/app/modules/contests/pages/contest/contest-attempts/filter/contest-attempts-filter.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<kep-card>
   <div class="card-header">
     <h5 class="card-title text-center">
       <span class="contest-color">
@@ -51,4 +51,4 @@
       }
     </form>
   </div>
-</div>
+</kep-card>
