--- a/src/app/modules/contests/components/contest-problem-card/contest-problem-card.component.html
+++ b/src/app/modules/contests/components/contest-problem-card/contest-problem-card.component.html
@@ -1,4 +1,4 @@
-<a (mouseleave)="removeProblem()" [routerLink]="['..', 'problem', contestProblem.symbol]">
+<a [routerLink]="['..', 'problem', contestProblem.symbol]">
   <kep-card
     [customClass]="'overlay-card ' + (contest | contestClasses) + ' ' + contestProblem.isSolved ? 'border-success' : contestProblem.isAttempted ? 'border-danger' : ''">
     <img [src]="contest.logo" class="card-img" height="200">
@@ -26,7 +26,7 @@
                 <i data-feather="x-circle"></i>
               </span>
             }
-            <span (mouseenter)="onProblemFocus()" class="text-dark ms-50">
+            <span class="text-dark ms-50">
               {{ contestProblem.symbol }}. {{ contestProblem.problem.title }}
               @if (contest.hasBalls()) {
                 <span>
