--- a/src/app/shared/components/attempt-verdict/attempt-verdict.component.html
+++ b/src/app/shared/components/attempt-verdict/attempt-verdict.component.html
@@ -1,4 +1,4 @@
-<span [ngbTooltip]="title" class="border-1 badge bg-{{ verdictColor }}-transparent">
+<span [ngbTooltip]="title" class="border-1 text-fixed-white badge bg-outline-{{ verdictColor }}">
   {{ shortTitle || title }}
 
   @if (showTestCaseNumber) {
