--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -27,7 +27,7 @@ $box-shadow: 0px 0.125rem 0.25rem rgba(255, 255, 25, 0.05);
 // Шрифты
 // ================================
 
-$default-font-family: 'Rajdhani', 'Roboto', sans-serif;
+$default-font-family: 'Rajdhani', 'Exo 2', sans-serif;
 $default-font-size: 0.95rem;
 $default-font-weight: 400;
 
@@ -211,7 +211,7 @@ $youtube: #FF0000;
   --primary08: rgba(var(--primary-rgb), 0.8);
   --primary09: rgba(var(--primary-rgb), 0.9);
   --primary005: rgba(var(--primary-rgb), 0.05);
-  --default-font-family: 'Rajdhani', 'Roboto', sans-serif;
+  --default-font-family: 'Rajdhani', 'Exo 2', sans-serif;
   --default-font-weight: 400;
   --default-text-color-rgb: 51, 51, 51;
   --default-border: #e8e8e8;
