--- a/src/app/shared/components/user-popover/user-popover/user-popover.component.scss
+++ b/src/app/shared/components/user-popover/user-popover/user-popover.component.scss
@@ -7,7 +7,7 @@
     margin-bottom: 0;
 
     .card-body {
-      background-color: $primary-01;
+      background: mix(black, $primary, 90);
     }
   }
 
