--- a/src/app/modules/duels/components/duel-countdown/duel-countdown.component.html
+++ b/src/app/modules/duels/components/duel-countdown/duel-countdown.component.html
@@ -1,4 +1,4 @@
-<div class="card bg-duel bg-primary">
+<kep-card>
   <div class="card-body mt-1">
     @if (duel.status == 0) {
       <h4 class="text-center text-white mb-1">
@@ -38,4 +38,4 @@
       </ng-template>
     </ngx-countdown>
   </div>
-</div>
+</kep-card>
