--- a/src/app/modules/duels/components/problem-list-card/problem-list-card.component.html
+++ b/src/app/modules/duels/components/problem-list-card/problem-list-card.component.html
@@ -1,5 +1,5 @@
-<div class="card duel-problem bg-primary">
-  <div class="card-header">
+<kep-card>
+  <div class="card-header p-3">
     <div>
       {{ duelProblem.symbol }}. {{ duelProblem.problem.title }}
     </div>
@@ -9,4 +9,4 @@
       </span>
     </div>
   </div>
-</div>
+</kep-card>
