road to English Arena #4

--- a/src/app/modules/challenges/components/challenge-card/challenge-card.component.html
+++ b/src/app/modules/challenges/components/challenge-card/challenge-card.component.html
@@ -14,7 +14,7 @@
           <span class="badge badge-glow" [ngClass]="{
             'bg-success': challenge.playerFirst.result > challenge.playerSecond.result,
             'bg-danger': challenge.playerFirst.result < challenge.playerSecond.result,
-            'badge-secondary': challenge.playerFirst.result == challenge.playerSecond.result
+            'bg-secondary': challenge.playerFirst.result == challenge.playerSecond.result
           }">
             {{ challenge.playerFirst.result }}
           </span>
@@ -52,7 +52,7 @@
           <span class="badge badge-glow" [ngClass]="{
             'bg-danger': challenge.playerFirst.result > challenge.playerSecond.result,
             'bg-success': challenge.playerFirst.result < challenge.playerSecond.result,
-            'badge-secondary': challenge.playerFirst.result == challenge.playerSecond.result
+            'bg-secondary': challenge.playerFirst.result == challenge.playerSecond.result
           }">
             {{ challenge.playerSecond.result }}
           </span>
