--- a/src/app/modules/challenges/pages/challenge/challenge.component.html
+++ b/src/app/modules/challenges/pages/challenge/challenge.component.html
@@ -107,7 +107,7 @@
     <div class="mt-2 mb-2 d-flex justify-content-between">
       <div class="text-center">
         <div class="text-center">
-          <challenges-user-view [user]="challenge.playerFirst"></challenges-user-view>
+          <challenges-user-view [user]="challenge.playerFirst"/>
           <span
             class="ms-1 me-1 mt-2 badge bg-{{ challenge.playerFirst.newRankTitle | challengesRankColor }}-transparent">
             {{ challenge.playerFirst.newRating }}
@@ -115,8 +115,8 @@
           <span [ngClass]="{
             'bg-success': challenge.playerFirst.delta > 0,
             'bg-danger': challenge.playerFirst.delta < 0,
-            'badge-secondary': challenge.playerFirst.delta == 0
-          }" class="badge badge-glow mb-1">
+            'bg-secondary': challenge.playerFirst.delta == 0
+          }" class="badge mb-1">
             <i [data-feather]="'trending-up'"></i>
             {{ challenge.playerFirst.delta }}
           </span>
@@ -185,7 +185,7 @@
           <span [ngClass]="{
             'bg-danger': challenge.playerFirst.result > challenge.playerSecond.result,
             'bg-success': challenge.playerFirst.result < challenge.playerSecond.result,
-            'badge-secondary': challenge.playerFirst.result == challenge.playerSecond.result
+            'bg-secondary': challenge.playerFirst.result == challenge.playerSecond.result
           }" class="badge badge-result badge-glow">
             {{ challenge.playerSecond.result }}
           </span>
