update badge color globally

--- a/src/app/styles/primeng-sass/theme-base/components/misc/_badge.scss
+++ b/src/app/styles/primeng-sass/theme-base/components/misc/_badge.scss
@@ -7,7 +7,7 @@
   height: $badgeHeight;
   line-height: $badgeHeight;
 
-  &.p-badge-secondary {
+  &.p-bg-secondary {
     background-color: $secondaryButtonBg;
     color: $secondaryButtonTextColor;
   }
